--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="to_room_choice">К выбору номера</string>
     <string name="choose_this_room">Выбрать номер</string>
     <string name="more_about_room">Подробнее о номере</string>
+    <string name="booking">Бронирование</string>
 </resources>
